# elaina-triehard

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
elaina_triehard/: impl_c.c
src/elaina_triehard/: impl_c.c  impl_c.pyx
