[project]
name = "elaina-triehard"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "Elaina", email = "GreyElaina@outlook.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel", "Cython>3"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "Cython>=3.0.11",
]

[tool.setuptools]
py-modules = ["elaina_triehard"]

[tool.cibuildwheel]
# don't build PyPy wheels, install from source instead
skip = "pp*"
